// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/virtualized-table-renderers/filePathCellRenderer should render a FilePathCell when all fields are available 1`] = `
<span
  className="bdl-FilePathCell"
  title="YouFooMe > CooMooFoo > fancy.jpg (123 Bytes)"
>
  <FileIcon
    extension="jpg"
  />
  <Breadcrumb
    label="contentPath"
  >
    <span
      className="bdl-FilePathCell-breadcrumbName"
      key="YouFooMe"
    >
      YouFooMe
    </span>
    <span
      className="bdl-FilePathCell-breadcrumbName"
      key="CooMooFoo"
    >
      CooMooFoo
    </span>
    <span
      className="bdl-FilePathCell-breadcrumbName"
      key="fancy.jpg (123 Bytes)"
    >
      fancy.jpg (123 Bytes)
    </span>
  </Breadcrumb>
</span>
`;

exports[`features/virtualized-table-renderers/filePathCellRenderer should render a FilePathCell when only id is available 1`] = `
<span
  className="bdl-FilePathCell"
  title="123"
>
  <FileIcon
    extension=""
  />
  <Breadcrumb
    label="contentPath"
  >
    <span
      className="bdl-FilePathCell-breadcrumbName"
      key="123"
    >
      123
    </span>
  </Breadcrumb>
</span>
`;

exports[`features/virtualized-table-renderers/filePathCellRenderer should render a FilePathCell with "All Files" text when given an external file 1`] = `
<span
  className="bdl-FilePathCell bdl-is-external"
  title="All Files > External File > External File (123 Bytes)"
>
  <FileIcon
    extension="jpg"
  />
  <Breadcrumb
    label="contentPath"
  >
    <span
      className="bdl-FilePathCell-breadcrumbName"
      key="All Files"
    >
      All Files
    </span>
    <span
      className="bdl-FilePathCell-breadcrumbName"
      key="External File"
    >
      External File
    </span>
    <span
      className="bdl-FilePathCell-breadcrumbName"
      key="External File (123 Bytes)"
    >
      External File (123 Bytes)
    </span>
  </Breadcrumb>
</span>
`;
